# AppCore

./: .clang-format  .gitignore  CMakeLists.txt  CreateSDK.cmake  CreateTestApp.cmake  CreateTestLib.cmake  Deps.cmake  Jenkinsfile  README.md  make  make.bat
cmake/: CompileMetalShaders.cmake  EmbedGLSL.cmake  EmbedMetal.cmake  EmbedMetalBinary.cmake  EmbedShader.cmake  GenerateMetalMasterHeader.cmake  ShaderCompilation.cmake  build_options.cmake  common.cmake
cmake/compiler/: clang-cl.cmake  clang_.cmake  uasm.cmake
cmake/toolchains/: clang_arm64_macos_11.3.cmake  clang_x64_windows.cmake  msvc_x64_windows.cmake
cmake/util/: autodetect_toolchain.cmake  generate_sources.cmake
include/AppCore/: App.h  AppCore.h  CAPI.h  Defines.h  Dialogs.h  JSHelpers.h  Monitor.h  Overlay.h  Platform.h  Window.h
shaders/build-shaders/: CMakeLists.txt  GenerateBinaryHeader.cmake  GenerateMasterHeader.cmake  GenerateTextHeader.cmake  README.md  build-shaders.bat  build-shaders.ps1
shaders/glsl/: shader_fill_frag.h  shader_fill_path_frag.h  shader_v2f_c4f_t2f_t2f_d28f_vert.h  shader_v2f_c4f_t2f_vert.h
shaders/hlsl/: blur.hlsli  clip.hlsli  common.hlsli  fill.hlsl  fill_path.hlsl  filter_basic.hlsl  filter_blur.hlsl  filter_dropshadow.hlsl  vertex_path.hlsl  vertex_quad.hlsl
shaders/hlsl/ps/: fill.hlsl  fill_path.hlsl  filter_blur.hlsl
shaders/hlsl/util/: compile.bat
shaders/hlsl/vs/: v2f_c4f_t2f.hlsl  v2f_c4f_t2f_t2f_d28f.hlsl
shaders/legacy/glsl/: shader_v2f_c4f_t2f_t2f_d28f_vert.h  shader_v2f_c4f_t2f_vert.h
shaders/legacy/hlsl/ps/: fill.hlsl  filter_basic.hlsl
shaders/legacy/hlsl/vs/: v2f_c4f_t2f.hlsl  v2f_c4f_t2f_t2f_d28f.hlsl
shaders/legacy/metal/util/: compile.sh
shaders/metal/: clear_fragment.metal  clear_vertex.metal
shaders/metal/src/: Shaders.metal
shaders/metal/util/: compile.sh
src/common/: AppImpl.cpp  AppImpl.h  CAPI.cpp  FallbackFont.h  FileLogger.cpp  FileLogger.h  FileUtils.cpp  FileUtils.h  GPUDriverImpl.cpp  GPUDriverImpl.h  JSHelpers.cpp  Overlay.cpp  OverlayManager.cpp  OverlayManager.h  Platform.cpp  RefCountedImpl.h  ThreadCPUMonitor.cpp  ThreadCPUMonitor.h  ULTextureSurface.cpp  ULTextureSurface.h
src/glfw/: CMakeLists.txt
src/linux/: AppGLFW.cpp  AppGLFW.h  ClipboardGLFW.cpp  ClipboardGLFW.h  DialogsLinux.cpp  FileSystemBasic.cpp  FileSystemBasic.h  FontLoaderLinux.cpp  FontLoaderLinux.h  MonitorGLFW.cpp  MonitorGLFW.h  WindowGLFW.cpp  WindowGLFW.h
src/linux/gl/: GPUContextGL.cpp  GPUContextGL.h  GPUDriverGL.cpp  GPUDriverGL.h
src/linux/vulkan/: GPUContextVK.cpp  GPUContextVK.h
src/mac/: AppDelegate.mm  AppMac.h  AppMac.mm  ClipboardMac.h  ClipboardMac.mm  DialogsMac.mm  FileSystemMac.h  FileSystemMac.mm  FontLoaderMac.h  FontLoaderMac.mm  IOSurfaceMac.h  IOSurfaceMac.mm  IOSurfaceView.h  IOSurfaceView.mm  MonitorMac.h  MonitorMac.mm  ViewController.h  ViewController.mm  ViewDelegate.h  ViewDelegate.mm  WindowDelegate.h  WindowDelegate.mm  WindowMac.h  WindowMac.mm
src/mac/metal/: GPUContextMetal.h  GPUContextMetal.mm  GPUDriverMetal.h  GPUDriverMetal.mm  ShaderTypes.h
src/win/: AppWin.cpp  AppWin.h  ClipboardWin.cpp  ClipboardWin.h  DIBSurface.cpp  DIBSurface.h  DialogsWin.cpp  DisplayLinkWin.cpp  DisplayLinkWin.h  FileSystemWin.cpp  FileSystemWin.h  FontLoaderWin.cpp  FontLoaderWin.h  MonitorWin.cpp  MonitorWin.h  TextAnalysisSource.cpp  TextAnalysisSource.h  VirtualKeyEventHelper.h  WindowWin.cpp  WindowWin.h  WindowsUtil.cpp  WindowsUtil.h
src/win/d3d11/: GPUContextD3D11.cpp  GPUContextD3D11.h  GPUDriverD3D11.cpp  GPUDriverD3D11.h  SwapChainD3D11.cpp  SwapChainD3D11.h
src/win/d3d12/: D3D12MemAlloc.cpp  D3D12MemAlloc.h  DescriptorAllocator.cpp  DescriptorAllocator.h  GPUContextD3D12.cpp  GPUContextD3D12.h  GPUDriverD3D12.cpp  GPUDriverD3D12.h  SwapChainD3D12.cpp  SwapChainD3D12.h
src/win/memory/: MemoryProfiler.h  MemoryProfiler_WinHeap.cpp
tests/: MiniBrowser.cpp
tests/MiniBrowser/: MiniBrowser.cpp  Page.cpp  Page.h  ThreadFactoryWin.h  ThreadManagerWin.cpp  ThreadManagerWin.h  UI.cpp  UI.h  main.cpp
tests/MiniBrowser/assets/: home.html  page.html  ui.html
tests/MiniBrowser/assets/tests/: audio.html  css_box_decorations.html  css_box_shadow.html  css_menu.html  javascript_marquee.html  native_input.html  svg_animated_spinner.html  upbeat-and-inspiring-loop.opus  video.html
tests/MiniBrowserLib/: Browser.cpp  MiniBrowserLib.cpp  MiniBrowserLib.h  Page.cpp  Page.h  ThreadFactoryWin.cpp  ThreadManagerWin.cpp  ThreadManagerWin.h  UI.h
tests/MiniBrowserLib/assets/: ui.js
tests/MiniProfiler/: MiniProfiler.cpp
tests/MiniProfiler/assets/: home.html  stats.html
tests/MiniTester/: MiniTester.cpp
tests/MiniTester/assets/: home.html
tests/MiniTester/assets/tests/: antialiasing.html  css_animated_spinner.html  css_opacity.html  svg_animated_clip_path.html  svg_clip_path.html  text_alpha_correction.html
tests/MiniTester/assets/tests/js/: jquery.marquee.js
